--- a/less/agency.less
+++ b/less/agency.less
@@ -175,13 +175,13 @@ header {
     text-align: center;
     color: white;
     .intro-text {
-        padding-top: 100px;
+        padding-top: 80px;
         padding-bottom: 50px;
         .intro-lead-in {
             .serif-font;
             font-style: italic;
-            font-size: 22px;
-            line-height: 22px;
+            font-size: 20px;
+            line-height: 20px;
             margin-bottom: 25px;
         }
         .intro-heading {
@@ -197,13 +197,13 @@ header {
 @media(min-width:768px) {
     header {
         .intro-text {
-            padding-top: 300px;
+            padding-top: 200px;
             padding-bottom: 200px;
             .intro-lead-in {
                 .serif-font;
                 font-style: italic;
-                font-size: 40px;
-                line-height: 40px;
+                font-size: 35px;
+                line-height: 35px;
                 margin-bottom: 25px;
             }
             .intro-heading {
@@ -232,6 +232,7 @@ section {
         text-transform: none;
         font-style: italic;
         font-weight: 400;
+        line-height: 150%;
         margin-bottom: 75px;
     }
 }
@@ -536,12 +537,9 @@ aside.clients {
 
 section#contact {
     background-color: @gray-darker;
-    background-image: url('../img/map-image.png');
+    background-image: url('../img/contact-bg.jpg');
     background-position: center;
     background-repeat: no-repeat;
-    .section-heading {
-        color: white;
-    }
     .form-group {
         margin-bottom: 25px;
         input,
