Updating color scheme and adding Samsung section

--- a/less/agency.less
+++ b/less/agency.less
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
     background-color: @gray-darker;
     border-color: transparent;
     .navbar-brand {
-        color: @theme-primary;
+        color: lighten(@theme-primary, 30%);
         .script-font;
         &:hover,
         &:focus,
