--- a/css/agency.css
+++ b/css/agency.css
@@ -11,7 +11,7 @@ body {
   color: #777777;
 }
 .text-primary {
-  color: #4DD745;
+  color: #518ECC;
 }
 p {
   font-size: 14px;
@@ -28,13 +28,13 @@ a.active {
   outline: none;
 }
 a {
-  color: #4DD745;
+  color: #518ECC;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #31c029;
+  color: #3574b5;
 }
 h1,
 h2,
@@ -57,8 +57,8 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: #4DD745;
-  border-color: #4DD745;
+  background-color: #518ECC;
+  border-color: #518ECC;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -69,8 +69,8 @@ h6 {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #31c029;
-  border-color: #2fb727;
+  background-color: #3574b5;
+  border-color: #336fad;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -92,17 +92,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #4DD745;
-  border-color: #4DD745;
+  background-color: #518ECC;
+  border-color: #518ECC;
 }
 .btn-primary .badge {
-  color: #4DD745;
+  color: #518ECC;
   background-color: white;
 }
 .btn-xl {
   color: white;
-  background-color: #4DD745;
-  border-color: #4DD745;
+  background-color: #518ECC;
+  border-color: #518ECC;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -116,8 +116,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #31c029;
-  border-color: #2fb727;
+  background-color: #3574b5;
+  border-color: #336fad;
 }
 .btn-xl:active,
 .btn-xl.active,
@@ -139,11 +139,11 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #4DD745;
-  border-color: #4DD745;
+  background-color: #518ECC;
+  border-color: #518ECC;
 }
 .btn-xl .badge {
-  color: #4DD745;
+  color: #518ECC;
   background-color: white;
 }
 .navbar-custom {
@@ -151,21 +151,21 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-custom .navbar-brand {
-  color: #4DD745;
+  color: #c7dbef;
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: #31c029;
+  color: #3574b5;
 }
 .navbar-custom .navbar-collapse {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-custom .navbar-toggle {
-  background-color: #4DD745;
-  border-color: #4DD745;
+  background-color: #518ECC;
+  border-color: #518ECC;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   color: white;
@@ -173,7 +173,7 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #4DD745;
+  background-color: #518ECC;
 }
 .navbar-custom .nav li a {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -184,18 +184,18 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #4DD745;
+  color: #518ECC;
   outline: none;
 }
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #4DD745;
+  background-color: #518ECC;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #31c029;
+  background-color: #3574b5;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -314,7 +314,7 @@ section h3.section-subheading {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
-  background: rgba(77, 215, 69, 0.9);
+  background: rgba(81, 142, 204, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -422,7 +422,7 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: #4DD745;
+  background-color: #518ECC;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -574,7 +574,7 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: #4DD745;
+  border-color: #518ECC;
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
@@ -604,7 +604,7 @@ section#contact :-ms-input-placeholder {
   color: #eeeeee;
 }
 section#contact .text-danger {
-  color: #4DD745;
+  color: #518ECC;
 }
 footer {
   padding: 25px 0;
@@ -643,7 +643,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #4DD745;
+  background-color: #518ECC;
 }
 .btn:focus,
 .btn:active,
@@ -727,11 +727,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: #4DD745;
+  background: #518ECC;
 }
 ::selection {
   text-shadow: none;
-  background: #4DD745;
+  background: #518ECC;
 }
 img::selection {
   background: transparent;
@@ -740,5 +740,5 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #4DD745;
+  webkit-tap-highlight-color: #518ECC;
 }
