--- a/less/variables.less
+++ b/less/variables.less
@@ -2,8 +2,8 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #4DD745;
-@theme-danger:     #4DD745;
+@theme-primary:    #518ECC;
+@theme-danger:     #518ECC;
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
